--- a/web/assets/styles/add_style.css
+++ b/web/assets/styles/add_style.css
@@ -7,7 +7,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 1.5rem; /* Updated border radius */
-  margin: 4.7rem 0; /* Updated margin */
+  margin-top:  1.4rem;
 }
 
 /* Left and Right sections of the form */
