--- a/web/views/Raports/report.html
+++ b/web/views/Raports/report.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="./assest/styles/style.css">
-    <link rel="stylesheet" href="./assest/styles/add_style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/styles/mang_style.css">
+    <link rel="stylesheet" href="../../assets/styles/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>RMS</title>
 </head>
 
@@ -16,7 +18,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Add User</h2>
+                <h1>Report</h2>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -25,75 +27,75 @@
             </div>
 
             <div class="sidebar">
-                <a href="../index.html" >
+                <a href="../../index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html">
+                <a href="../users/users.html">
                     <span class="material-icons-sharp">
                         person
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="adduser.html" class="active">
+                <a href="../users/adduser.html" >
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New Users</h3>
                 </a>
-                <a href="tables.html">
+                <a href="../Tables/tables.html">
                     <span class="material-icons-sharp">
                         table_restaurant
                     </span>
                     <h3>Tables</h3>
                 </a>
-                <a href="category.html">
+                <a href="../categorys/category.html">
                     <span class="material-icons-sharp">
                         category
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="products.html" >
+                <a href="../products/products.html" >
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="addproduct.html" >
+                <a href="../products/addproduct.html" >
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New product</h3>
                 </a>
-                <a href="orders.html">
+                <a href="../Orders/orders.html">
                     <span class="material-icons-sharp">
                         list_alt
                     </span>
                     <h3>Orders</h3>
                     <span class="message-count">27</span>
                 </a>
-                <a href="addorder.html">
+                <a href="../Orders/addorder.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New order</h3>
                 </a>
-                <a href="report.html">
+                <a href="../Raports/report.html"  class="active">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="settings.html">
+                <a href="../Settings/settings.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Settings</h3>
                 </a>
                 
-                <a href="login.html">
+                <a href="../../login.html">
                     <span class="material-icons-sharp">
                         logout
                     </span>
@@ -106,59 +108,83 @@
         <!-- Main Content -->
         <main>
             
+            <!-- Analyses -->
             <div class="form-container">
-                <div class="form-left ">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" id="username" name="username" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirm-password">Confirm Password</label>
-                        <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password">
-                    </div>
-                    <div class="form-group">
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" name="first-name" placeholder="First Name">
-                    </div>
+                <div class="manage-users-container">
                     
+                    <div class="chart-container">
+                        <canvas id="ordersChart"></canvas>
+                    </div>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Month - Year</th>
+                            <th>Amount</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td>2021-01</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-02</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-03</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-04</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-05</td>
+                            <td>$182.31</td>
+                        </tr>
+                        <tr>
+                            <td>2021-06</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-07</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-08</td>
+                            <td>$19.36</td>
+                        </tr>
+                        <tr>
+                            <td>2021-09</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-10</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-11</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>2021-12</td>
+                            <td>$0</td>
+                        </tr>
+                        </tbody>
+                        <tfoot>
+                        <tr>
+                            <th>Total Amount</th>
+                            <th>$201.67</th>
+                        </tr>
+                    </tfoot>
+                    </table>
+                
+            
                     
-                    <div class="form-group">
-                        <label for="gender">Gender</label>
-                        <div class="radio-group">
-                            <input type="radio" id="male" name="gender" value="male">
-                            <label for="male">Male</label>
-                            <input type="radio" id="female" name="gender" value="female">
-                            <label for="female">Female</label>
-                        </div>
-                    </div>
                 </div>
-                <div class="form-right">
-                    
-                    <div class="form-group">
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" name="last-name" placeholder="Last Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone</label>
-                        <input type="tel" id="phone" name="phone" placeholder="Phone">
-                    </div>
-                    <div class="form-group">
-                        <label for="bio">Bio</label>
-                        <textarea id="bio" name="bio" placeholder="Bio"></textarea>
-                    </div>
-                </div>
-                <div class="button-container">
-                    <button class="submit-btn">ADD</button>
-                </div>
-            </div>
+            </div> 
+            
         </main>
         <!-- End of Main Content -->
         
@@ -185,7 +211,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="../images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
         
@@ -194,7 +220,7 @@
         
             <div class="user-profile">
                 <div class="logo">
-                    <img src="../images/logo.png" alt="Company logo">
+                    <img src="../../images/logo.png" alt="Company logo">
                     <h2>Favor Haven</h2>
                     <p>The Best for The Best</p>
                 </div>
@@ -259,9 +285,10 @@
         
         </div>
         
-    </div>
-    <script src="./assest/scripts/orders.js"></script>
+
+
     <script src="./assest/scripts/index.js"></script>
+    <script src="./assest/scripts/report.js"></script>
 </body>
 
 </html>
