--- a/web/views/Users/users.html
+++ b/web/views/Users/users.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="./assest/styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="../../assets/styles/mang_style.css">
+    <link rel="stylesheet" href="../../assets/styles/style.css">
     <title>RMS</title>
 </head>
 
@@ -15,7 +19,7 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Settings</h2>
+                <h1>Users</h2>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
@@ -24,75 +28,75 @@
             </div>
 
             <div class="sidebar">
-                <a href="../index.html" class="active">
+                <a href="../../index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="users.html">
+                <a href="../users/users.html"  class="active">
                     <span class="material-icons-sharp">
                         person
                     </span>
                     <h3>Users</h3>
                 </a>
-                <a href="adduser.html">
+                <a href="../users/adduser.html" >
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New Users</h3>
                 </a>
-                <a href="tables.html">
+                <a href="../Tables/tables.html">
                     <span class="material-icons-sharp">
                         table_restaurant
                     </span>
                     <h3>Tables</h3>
                 </a>
-                <a href="category.html">
+                <a href="../categorys/category.html">
                     <span class="material-icons-sharp">
                         category
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="products.html" >
+                <a href="../products/products.html" >
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="addproduct.html" >
+                <a href="../products/addproduct.html" >
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New product</h3>
                 </a>
-                <a href="orders.html">
+                <a href="../Orders/orders.html">
                     <span class="material-icons-sharp">
                         list_alt
                     </span>
                     <h3>Orders</h3>
                     <span class="message-count">27</span>
                 </a>
-                <a href="addorder.html">
+                <a href="../Orders/addorder.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
                     <h3>New order</h3>
                 </a>
-                <a href="report.html">
+                <a href="../Raports/report.html">
                     <span class="material-icons-sharp">
                         report_gmailerrorred
                     </span>
                     <h3>Reports</h3>
                 </a>
-                <a href="settings.html" class="active">
+                <a href="../Settings/settings.html">
                     <span class="material-icons-sharp">
                         settings
                     </span>
                     <h3>Settings</h3>
                 </a>
                 
-                <a href="login.html">
+                <a href="../../login.html">
                     <span class="material-icons-sharp">
                         logout
                     </span>
@@ -103,12 +107,42 @@
         <!-- End of Sidebar Section -->
 
         <!-- Main Content -->
-        <main>
-            
-            <!-- Analyses -->
-           
-            <!-- End of Recent Orders -->
         
+        <main>
+            <div class="form-container">
+                <div class="manage-users-container">
+                    <div class="form-group">
+                        Show 
+                        <select id="category">
+                            <option value="1">1</option>
+                          
+                        </select> 
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Username</th>
+                                <th>Email</th>
+                                <th>First name</th>
+                                <th>Last name</th>
+                                <th>Phone</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                          
+                        </tbody>
+                    </table>
+                    <div class="pagination-container">
+                        Showing 1 of 1 entries
+                        <ul class="pagination">
+                            <li><a href="#">Previous</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">Next</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </main>
         <!-- End of Main Content -->
         
@@ -135,7 +169,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="../images/profile-1.jpg" alt="Admin profile picture">
+                        <img src="../../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
         
@@ -144,7 +178,7 @@
         
             <div class="user-profile">
                 <div class="logo">
-                    <img src="../images/logo.png" alt="Company logo">
+                    <img src="../../images/logo.png" alt="Company logo">
                     <h2>Favor Haven</h2>
                     <p>The Best for The Best</p>
                 </div>
@@ -208,10 +242,9 @@
             </div>
         
         </div>
-        
-
-    <script src="./assest/scripts/orders.js"></script>
-    <script src="./assest/scripts/index.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>   
+    <script src="../../assets/scripts/users.js"></script>
+    
 </body>
 
 </html>
