--- a/web/views/Users/adduser.html
+++ b/web/views/Users/adduser.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/style.css">
     <link rel="stylesheet" href="../../assets/styles/add_style.css">
+    <script type="text/javascript" src="/eel.js"></script>
+
     <title>RMS</title>
 </head>
 
@@ -25,7 +27,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="../../index.html" >
+                <a href="../Dashboard/index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
