--- a/web/views/Products/products.html
+++ b/web/views/Products/products.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
+    <script type="text/javascript" src="/eel.js"></script>
+
     <title>RMS</title>
 </head>
 
@@ -27,7 +29,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="../../index.html" >
+                <a href="../Dashboard/index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
