--- a/web/views/Raports/report.html
+++ b/web/views/Raports/report.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>
+
     <title>RMS</title>
 </head>
 
@@ -27,7 +29,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="../../index.html" >
+                <a href="../Dashboard/index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
