--- a/web/views/Tables/tables.html
+++ b/web/views/Tables/tables.html
@@ -10,6 +10,8 @@
     
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
+    <script type="text/javascript" src="/eel.js"></script>
+
     <title>RMS</title>
 </head>
 
@@ -28,7 +30,7 @@
             </div>
 
             <div class="sidebar">
-                <a href="../../index.html" >
+                <a href="../Dashboard/index.html" >
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
