--- a/web/views/Users/users.html
+++ b/web/views/Users/users.html
@@ -10,6 +10,9 @@
     
     <link rel="stylesheet" href="../../assets/styles/mang_style.css">
     <link rel="stylesheet" href="../../assets/styles/style.css">
+    <script type="text/javascript" src="/eel.js"></script>
+
+    <script type="text/javascript" src="../../assets/scripts/users.js"></script>
     <title>RMS</title>
 </head>
 
@@ -19,91 +22,66 @@
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Users</h2>
+                <h1>Add User</h2>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
                     </span>
                 </div>
             </div>
-
             <div class="sidebar">
-                <a href="../../index.html" >
-                    <span class="material-icons-sharp">
-                        dashboard
-                    </span>
+                <a href="../Dashboard/index.html">
+                    <span class="material-icons-sharp">dashboard</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="../users/users.html"  class="active">
-                    <span class="material-icons-sharp">
-                        person
-                    </span>
+                <a href="../users/users.html" class="active">
+                    <span class="material-icons-sharp">person</span>
                     <h3>Users</h3>
                 </a>
-                <a href="../users/adduser.html" >
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
+                <a href="../users/adduser.html">
+                    <span class="material-icons-sharp">add</span>
                     <h3>New Users</h3>
                 </a>
                 <a href="../Tables/tables.html">
-                    <span class="material-icons-sharp">
-                        table_restaurant
-                    </span>
+                    <span class="material-icons-sharp">table_restaurant</span>
                     <h3>Tables</h3>
                 </a>
                 <a href="../categorys/category.html">
-                    <span class="material-icons-sharp">
-                        category
-                    </span>
+                    <span class="material-icons-sharp">category</span>
                     <h3>Category</h3>
                 </a>
-                <a href="../products/products.html" >
-                    <span class="material-icons-sharp">
-                        inventory_2
-                    </span>
+                <a href="../products/products.html">
+                    <span class="material-icons-sharp">inventory_2</span>
                     <h3>Products</h3>
                 </a>
-                <a href="../products/addproduct.html" >
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
+                <a href="../products/addproduct.html">
+                    <span class="material-icons-sharp">add</span>
                     <h3>New product</h3>
                 </a>
                 <a href="../Orders/orders.html">
-                    <span class="material-icons-sharp">
-                        list_alt
-                    </span>
+                    <span class="material-icons-sharp">list_alt</span>
                     <h3>Orders</h3>
                     <span class="message-count">27</span>
                 </a>
                 <a href="../Orders/addorder.html">
-                    <span class="material-icons-sharp">
-                        add
-                    </span>
+                    <span class="material-icons-sharp">add</span>
                     <h3>New order</h3>
                 </a>
                 <a href="../Raports/report.html">
-                    <span class="material-icons-sharp">
-                        report_gmailerrorred
-                    </span>
+                    <span class="material-icons-sharp">report_gmailerrorred</span>
                     <h3>Reports</h3>
                 </a>
                 <a href="../Settings/settings.html">
-                    <span class="material-icons-sharp">
-                        settings
-                    </span>
+                    <span class="material-icons-sharp">settings</span>
                     <h3>Settings</h3>
                 </a>
-                
                 <a href="../../login.html">
-                    <span class="material-icons-sharp">
-                        logout
-                    </span>
+                    <span class="material-icons-sharp">logout</span>
                     <h3>Logout</h3>
                 </a>
             </div>
         </aside>
+        
         <!-- End of Sidebar Section -->
 
         <!-- Main Content -->
@@ -242,8 +220,8 @@
             </div>
         
         </div>
-    <script type="text/javascript" src="/eel.js"></script>   
-    <script src="../../assets/scripts/users.js"></script>
+        <!-- JavaScript includes -->
+    
     
 </body>
 
