--- a/web/views/Raports/report.html
+++ b/web/views/Raports/report.html
@@ -289,8 +289,8 @@
         
 
 
-    <script src="./assest/scripts/index.js"></script>
-    <script src="./assest/scripts/report.js"></script>
+    <script src="../../assets/scripts/report.js"></script>
+    
 </body>
 
 </html>
