--- a/web/views/Users/adduser.html
+++ b/web/views/Users/adduser.html
@@ -8,26 +8,23 @@
     <link rel="stylesheet" href="../../assets/styles/style.css">
     <link rel="stylesheet" href="../../assets/styles/add_style.css">
     <script type="text/javascript" src="/eel.js"></script>
-
     <title>RMS</title>
 </head>
 
 <body>
-
     <div class="container">
         <!-- Sidebar Section -->
         <aside>
             <div class="toggle">
-                <h1>Add User</h2>
+                <h1>Add User</h1>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
                         close
                     </span>
                 </div>
             </div>
-
             <div class="sidebar">
-                <a href="../Dashboard/index.html" >
+                <a href="../Dashboard/index.html">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
@@ -57,13 +54,13 @@
                     </span>
                     <h3>Category</h3>
                 </a>
-                <a href="../products/products.html" >
+                <a href="../products/products.html">
                     <span class="material-icons-sharp">
                         inventory_2
                     </span>
                     <h3>Products</h3>
                 </a>
-                <a href="../products/addproduct.html" >
+                <a href="../products/addproduct.html">
                     <span class="material-icons-sharp">
                         add
                     </span>
@@ -94,7 +91,6 @@
                     </span>
                     <h3>Settings</h3>
                 </a>
-                
                 <a href="../../login.html">
                     <span class="material-icons-sharp">
                         logout
@@ -163,7 +159,7 @@
             </div>
         </main>
         <!-- End of Main Content -->
-        
+
         <!-- Right Section -->
         <div class="right-section">
             <div class="nav">
@@ -180,7 +176,7 @@
                         dark_mode
                     </span>
                 </div>
-        
+
                 <div class="profile">
                     <div class="info">
                         <p>Hey, <b>Kassimi</b></p>
@@ -190,10 +186,9 @@
                         <img src="../../images/profile-1.jpg" alt="Admin profile picture">
                     </div>
                 </div>
-        
             </div>
             <!-- End of Nav -->
-        
+
             <div class="user-profile">
                 <div class="logo">
                     <img src="../../images/logo.png" alt="Company logo">
@@ -201,7 +196,7 @@
                     <p>The Best for The Best</p>
                 </div>
             </div>
-        
+
             <div class="reminders">
                 <div class="header">
                     <h2>Reminders</h2>
@@ -209,7 +204,7 @@
                         notifications_none
                     </span>
                 </div>
-        
+
                 <div class="notification">
                     <div class="icon">
                         <span class="material-icons-sharp">
@@ -228,7 +223,7 @@
                         </span>
                     </div>
                 </div>
-        
+
                 <div class="notification deactive">
                     <div class="icon">
                         <span class="material-icons-sharp">
@@ -247,7 +242,7 @@
                         </span>
                     </div>
                 </div>
-        
+
                 <div class="notification add-reminder">
                     <div>
                         <span class="material-icons-sharp">
@@ -256,13 +251,13 @@
                         <h3>Add Reminder</h3>
                     </div>
                 </div>
-        
             </div>
-        
         </div>
-        
+        <!-- End of Right Section -->
+
     </div>
-    <script type="text/javascript" src="/eel.js"></script>
+
+    <!-- Load JavaScript at the end of the body -->
     <script src="../../assets/scripts/add_user.js"></script>
 </body>
 
